<resources>
    <string name="app_name">StaffPad</string>
    <string name="tablet_app">Tablet App</string>
    <string name="bad_string">This is some text</string>
    <string name="good_string">This is &lt; some text</string>
    <string name="sheet_music_content">Sheet Music Content</string>
    <string name="edit">Edit</string>
    <string name="import1">Import</string>
    <string name="title_labels">Title Labels</string>
    <string name="composers">Composers</string>
    <string name="genres">Genres</string>
    <string name="tags">Tags</string>
    <string name="labels">Labels</string>
    <string name="indexes">Indexes</string>
    <string name="add">Add</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="page">Page</string>
    <string name="title">Title</string>
    <string name="flags">Flags</string>
    <string name="toc">TOC</string>
    <string name="setlist">Setlist</string>
    <string name="manual">Manual</string>
    <string name="fresh">Fresh</string>
    <string name="share_pdf">Share PDF</string>
    <string name="page_properties">Page Properties</string>
    <string name="show_in_library">Show in Library</string>
    <string name="new_tab">New Tab</string>
    <string name="new_window">New Window</string>
    <string name="add_to_setlist">Add to Setlist</string>
    <string name="delete">Delete</string>
    <string name="tools">Tools</string>
    <string name="search">Search</string>
    <string name="enter_search_term">Enter search term</string>
    <string name="cancel">Cancel</string>
    <string name="single_page">Single Page</string>
    <string name="sheet_title">Sheet Title</string>
    <string name="_1_12">1/12</string>
    <string name="library">Library</string>
    <string name="no_audio_files_attached">No audio files attached</string>
    <string name="audio_files_associated_with_this_sheet">Audio files associated with this sheet:</string>
    <string name="close_audio_view">Close audio view</string>
    <string name="add_audio_file">Add audio file</string>
    <string name="attached_audio_files">Attached Audio Files</string>
    <string name="delete_selected_audio">Delete selected audio</string>
    <string name="audio">Audio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="sheets">Sheets</string>
    <string name="select_the_libraries_to_include_this_sheet_in">Select the libraries to include this sheet in:</string>
    <string name="all_sheets">All Sheets</string>
    <string name="create_new_library">Create New Library</string>
    <string name="apply">Apply</string>
    <string name="add_layer">Add Layer</string>
    <string name="crop_amp_align_page"><![CDATA[Crop & Align Page]]></string>
    <string name="rotate_right">Rotate Right</string>
    <string name="reset">Reset</string>
    <string name="exit_annotations">Exit annotations</string>
    <string name="text_tool">Text tool</string>
    <string name="clear_annotations">Clear annotations</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="eraser">Eraser</string>
    <string name="pen_settings">Pen settings</string>
    <string name="opacity">Opacity</string>
    <string name="width">Width</string>
    <string name="name">Name</string>
    <string name="brightness_0">Brightness: 0</string>
    <string name="contrast_1_00">Contrast: 1.00</string>
    <string name="restore">Restore</string>
    <string name="align_0">Align: 0°</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="name_placeholder">Name Placeholder</string>
    <string name="time_placeholder">0:00 / 0:00</string>
    <string name="previous_track">previous track</string>
    <string name="artwork">ArtWork</string>
    <string name="next_track">Next Track</string>
    <string name="reset_button">Reset Button</string>
    <string name="play_button">Play Button</string>
    <string name="pause_button">Pause Button</string>
    <string name="tool_icon">tool icon</string>
    <string name="rearrange_pages">Rearrange Pages</string>
    <string name="multi_select">Multi-select</string>
    <string name="save">Save</string>
    <string name="delete_pages">Delete pages</string>
    <string name="select">Select</string>
    <string name="play">Play</string>
    <string name="dissmiss_button">dissmiss button</string>
    <string name="left_button">left button</string>
    <string name="right_button">right button</string>
    <string name="metronome">Metronome</string>
    <string name="import_text">Import</string>
    <string name="search_results">Search results</string>
    <string name="ok">OK</string>
    <string name="metadata">Metadata</string>
    <string name="properties">Properties</string>
    <string name="libraries">Libraries</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="theme_mode">Theme Mode</string>
    <string name="theme_system">System default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="pitch">Pitch</string>
    <string name="paste_youtube_link">Paste YouTube link</string>
    <string name="add_link">Add Link</string>
    <string name="delete_audio">Delete audio</string>
    <string name="play_audio">Play audio</string>
    <string name="drag_handle">Drag Handle</string>
    <string name="library_name">Library Name</string>
    <string name="description_optional">Description (optional)</string>
    <string name="_0_sheets">0 sheets</string>
    <string name="layer">Layer</string>
    <string name="type">Type</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="select_key">Select Key</string>
    <string name="natural">Natural</string>
    <string name="sharp">♯ (Sharp)</string>
    <string name="flat">♭ (Flat)</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="selected_key">Selected Key:</string>
    <string name="c_major">C Major</string>
    <string name="tune_details">Tune Details</string>
    <string name="file_name">File name:</string>
    <string name="select_the_setlists_to_include_this_sheet_in">Select the setlists to include this sheet in:</string>
    <string name="section">Section</string>
</resources>