<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_select"
        android:title="@string/select"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_multi_select"
        android:title="@string/multi_select"
        android:icon="@drawable/ic_select_multiple_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_pages"
        android:icon="@drawable/ic_delete_24"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        android:icon="@drawable/ic_check_24"
        app:showAsAction="ifRoom" />
</menu>
