<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border_shape_edge_to_edge">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dissmiss_button"
        android:src="@drawable/round_remove_24"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        app:tint="@color/slider_thumb_color" />
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_left_arrow"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/round_fast_rewind_24"
            app:tint="#9B9898"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="0dp"
            android:contentDescription="@string/left_button" />

        <SeekBar
            android:background="@drawable/piano_bar"
            android:id="@+id/sb"
            android:progressDrawable="@null"
            android:thumb="@drawable/piano_seekbar_thumb"
            android:padding="0dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/iv_right_arrow"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/right_button"
            android:src="@drawable/round_fast_forward_24"
            app:tint="#9B9898"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="15dp"/>

    </LinearLayout>

    <com.chengtao.pianoview.view.PianoView
        android:id="@+id/pv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.chengtao.pianoview.view.PianoView>
</LinearLayout>