<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <com.example.staffpad.views.PenPreviewView
            android:id="@+id/penPreview"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/presetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Preset Name"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/width"
            android:layout_marginBottom="4dp"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/widthSeek"
            style="@style/Widget.Material3.Slider"
            android:layout_width="match_parent"
            app:thumbColor="@color/blue_secondary"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:thumbRadius="15dp" />

        <TextView
            android:id="@+id/opacityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opacity"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/alphaSeek"
            style="@style/Widget.Material3.Slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:thumbColor="?attr/colorPrimary"
            android:layout_marginBottom="12dp"
            app:thumbRadius="15dp" />

        <com.skydoves.colorpickerview.ColorPickerView
            android:id="@+id/colorPickerView"
            android:layout_width="match_parent"
            android:layout_height="220dp"/>

    </LinearLayout>
</ScrollView>
